<resources>
    <string name="title_main">Home</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_explorer">Explorer</string>
    <string name="title_setting">Settings</string>
    <string name="title_account">Account</string>
    <string name="title_faq">Application</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_eto">ETO</string>
    <string name="title_transaction_match">Contest</string>
    <string name="title_order_history">Orders</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_deploy">Deploy</string>
    <string name="title_transfer_records">Transfer Records</string>
    <string name="title_transfer_details">Transfer Details</string>
    <string name="title_deposit_records">Deposit Records</string>
    <string name="title_withdraw_records">Withdraw Records</string>
    <string name="title_withdraw_deposit_records">Deposit&amp;Withdraw records</string>
    <string name="title_orders">Orders</string>
    <string name="popular_title">most popular</string>
    <string name="watch_list_name">Name</string>
    <string name="watch_list_vol">Vol</string>
    <string name="watch_list_new_price_title">Last Price</string>
    <string name="watch_list_vibration_range_title">24h Chg%</string>
    <string name="log_in_cybex">Log in Cybex</string>
    <string name="account_balance">Your Total Balance(CYB):</string>
    <string name="account_introduction_text">CYBEX is a decentralized exchange that seeks to improve the liquidity of crypto-assets that’s more transparent, highly efficient and secure.</string>
    <string name="account_available_asset">Your Portfolio</string>
    <string name="account_view_all">View All</string>
    <string name="account_other_asset">Asset Operations</string>
    <string name="account_hello">Hello,</string>
    <string name="account_membership_basic">Basic Member</string>
    <string name="account_membership_lifetime">Lifetime Member</string>
    <string name="account_balance_dialog_title">BALANCE</string>
    <string name="account_balance_dialog_content">This is the estimated value of all your assets,including any hidden assets,open orders,debt and collateral.The estimate is done using only live blockchain data and may not be perfectly accurate.</string>
    <string name="account_balance_dialog_button">OK</string>
    <string name="text_my_balance">My Balance</string>
    <string name="text_lockup_assets">Lockup Assets</string>
    <string name="text_hash_lockup">Hash Lockup Assets</string>
    <string name="text_deposit_withdraw">Deposit/Withdraw</string>
    <string name="text_address_management">Address Management</string>
    <string name="text_coin_age">Coin Age</string>
    <string name="text_coin_age_with_colon">Coin Age:</string>
    <string name="text_coin_age_dialog_content"><Data><![CDATA[Coin age is calculated based on the CYB in the CYBEX account. It is updated at UTC+00:00 every day.<br>

<font color="#fe9b55">Calculation Rules</font><br>
Starting time: the date of CYBEX exchange launched<br>

Coin age = coin age of the previous day * a depreciation coefficient (X = 0.975) + open interests of CYB for the day<br>

Coin age of the first day = open interests of CYB<br>

For the convenience, coin age on APP = coin age * (1 - depreciation coefficient)<br>

Note<br>

CYB in order or locked is not counted.<br>

If you have very little open interests or very large depreciation, the coin age may be 0 due to the accuracy.<br>

Example<br>

User A holds position of 10,000 CYB for one year, the coin age (A) = 10000*（1+0.975+……+0.975^364）=399960, while coin age on APP (A) = 399960*（1-0.975）= 9999.<br>

If user B wants to have the same coin age as user A, he/she needs to purchase CYB that is 40 times of A’s.<br>

If user C purchases 10,000 CYB and sells it the same day, coin age = 10000; After 28 days, C’s coin age = 10000*0.975^27 = 5048, which is a half of the initial.]]></Data></string>
    <string name="balance_page_title">My Balance</string>
    <string name="balance_page_total_balance">Your Total Balance(CYB)</string>
    <string name="balance_page_transfer">Transfer</string>
    <string name="balance_page_use">Deploy</string>
    <string name="balance_page_no_asset">No Asset</string>
    <string name="balance_page_frozen_no_asset">Frozen: --</string>
    <string name="balance_page_frozen_asset">Frozen:</string>
    <string name="open_order_buy">BUY</string>
    <string name="open_order_sell">SELL</string>
    <string name="open_order_price_amount">Order Price/Order Amount</string>
    <string name="open_order_filled_cancel">Filled/Cancel</string>
    <string name="markets_title">Market</string>
    <string name="market_page_buy_price">Buy Price(--)</string>
    <string name="market_page_volume_short">Vol</string>
    <string name="market_page_sell_price">Sell Price(--)</string>
    <string name="market_page_trade_history_price">Price(--)</string>
    <string name="market_page_trade_history_date">Time</string>
    <string name="market_page_trade_history_base">Total(--)</string>
    <string name="market_page_trade_history_quote">Amount(--)</string>
    <string name="market_page_order_book">Order Book</string>
    <string name="market_page_trade_history">Market Trades</string>
    <string name="k_ma7">MA(7):</string>
    <string name="k_ma25">MA(25):</string>
    <string name="k_ma99">MA(99):</string>
    <string name="k_boll">BOLL:</string>
    <string name="k_ema7">EMA(7):</string>
    <string name="k_ema25">EMA(25)</string>
    <string name="k_ema99">EMA(99)</string>
    <string name="index_high">H</string>
    <string name="index_low">L</string>
    <string name="index_open">O</string>
    <string name="index_close">C</string>
    <string name="index_change_price">Chg</string>
    <string name="index_change_ratio">Chg%</string>
    <string name="index_vol">Vol</string>
    <string name="text_comment_now">Comment now</string>
    <string name="text_percent_0">0.00%</string>
    <string name="setting_default_unlock_method">Set default unlock method</string>
    <string name="setting_default_unlock_method_enotes">Unlock by CybKey</string>
    <string name="setting_default_unlock_method_password">Unlock by password</string>
    <string name="setting_set_cloud_password">Set Cloud Password</string>
    <string name="setting_set_enotes_card_password">Set card password</string>
    <string name="setting_has_already_set">Set</string>
    <string name="setting_not_set">Not Set</string>
    <string name="setting_language">Language</string>
    <string name="setting_language_english">English</string>
    <string name="setting_language_chinese">简体中文</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_switch_server">Switch Server</string>
    <string name="setting_official_server">Official Server</string>
    <string name="setting_test_server">Test Server</string>
    <string name="setting_version">Version</string>
    <string name="setting_frequency">Frequency</string>
    <string name="setting_lock_time">Unlock time</string>
    <string name="setting_help_feedback">Help&amp;Feedback</string>
    <string name="setting_theme_dark">Dark</string>
    <string name="setting_theme_light">Light</string>
    <string name="setting_version_is_the_latest">The current version is the latest one</string>
    <string name="setting_version_update_available">Update Available</string>
    <string name="setting_version_update_content">A new version of CybexDex is available,Please update to newest version now.</string>
    <string name="setting_version_update_next_time">Next</string>
    <string name="setting_version_update_now">Update</string>
    <string name="setting_frequency_ordinary_market">Ordinary Market</string>
    <string name="setting_frequency_real_time_market">Real-time Market</string>
    <string name="setting_frequency_real_time_market_only_wifi">Real-time Market(WiFi Only)</string>
    <string name="text_cancel">Cancel</string>
    <string name="setting_lock_wallet_time_5min">5min</string>
    <string name="setting_lock_wallet_time_20min">20min</string>
    <string name="setting_lock_wallet_time_60min">60min</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_register">Sign Up</string>
    <string name="have_account_login">Already have an account?</string>
    <string name="prompt_user_name">Account Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_pin_code">Pin Code</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">Incorrect Password or Account</string>
    <string name="text_ok">OK</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="login_cloud_wallet">Use Cloud Wallet mode to login Account</string>
    <string name="register_create_cloud_wallet">Use Cloud Wallet mode to create Account</string>
    <string name="register_dialog_title">ATTENTIONS</string>
    <string name="register_dialog_confirm">Confirm</string>
    <string name="register_dialog_content_current_password">Current Password:</string>
    <string name="register_dialog_content_attentions">
        • I understand that i will lose access to my funds if i LOSE my password\n
        • I understand that no one can RECOVER my password if i lose or forget it\n
        • I have WRITTEN DOWN or otherwise STORED my password</string>
    <string name="import_activity_unknown_error">Some error occurred.</string>
    <string name="import_activity_private_key_invalid">Invalid private key.</string>
    <string name="import_activity_account_invalid">The account does not exist.</string>
    <string name="import_activity_account_not_match_key">The account and the private key do not match.</string>
    <string name="import_activity_account_name_invalid">The account name cannot be found.</string>
    <string name="import_activity_connect_failed">Failed to connect to server.</string>
    <string name="import_activity_file_failed">Cannot read content from the file.</string>
    <string name="import_activity_password_invalid">Invalid password.</string>
    <string name="import_activity_file_bin_password_invalid">Invalid wallet file or password.</string>
    <string name="create_account_activity_network_fail">Failed to connect to server</string>
    <string name="create_account_activity_account_object_exist">The account has already existed</string>
    <string name="create_account_activity_response_fail">Server failed to response</string>
    <string name="create_account_activity_create_fail">Failed to sign up</string>
    <string name="create_account_account_name_error_full_letter">The account name cannot contain only letters</string>
    <string name="text_empty">--</string>
    <string name="dialog_text_price">Price:</string>
    <string name="dialog_text_amount">Amount:</string>
    <string name="dialog_text_total">Total:</string>
    <string name="text_account_for_verification">Account for verification</string>
    <string name="text_hint_account_for_verificaiton">Input or scan the account name</string>
    <string name="text_deploy_asset">Deploy asset</string>
    <string name="text_hint_deploy_asset">Input or choose asset</string>
    <string name="text_quantity_to_deploy">Quantity to deploy</string>
    <string name="text_hint_quantity_to_deploy">Input the quantity</string>
    <string name="text_transaction_fee">Transaction fee</string>
    <string name="text_trade_history">Trade History</string>
    <string name="text_order_history">Order History</string>
    <string name="text_open_orders">Open Orders</string>
</resources>