<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:subtitleTextColor="@color/primary_color_grey"
        app:titleTextColor="@color/primary_color_grey"
        app:title=""
        app:navigationIcon="@drawable/ic_back_24_px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_orders"
            style="@style/font_white_dark_bold_large"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/sg_orders_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:sc_border_width="@dimen/width_1"
        app:sc_checked_text_color="@color/font_color_white_dark"
        app:sc_corner_radius="@dimen/corner_radius_4"
        app:sc_tint_color="@color/primary_color_grey">

        <RadioButton
            android:id="@+id/rb_open_orders"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/text_open_orders" />

        <RadioButton
            android:id="@+id/rb_orders_history"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_order_history" />

        <RadioButton
            android:id="@+id/rb_trade_history"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_trade_history" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <FrameLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>