<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_unlock_period_select_tv_5_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        style="@style/font_gray_large"
        android:textColor="@color/text_frequency_mode_selector"
        android:textIsSelectable="true"
        android:gravity="center"
        android:background="@color/dialog_frequency_mode_background_color"
        android:text="@string/setting_lock_wallet_time_5min"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/dialog_unlock_period_select_tv_20_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        style="@style/font_gray_large"
        android:textColor="@color/text_frequency_mode_selector"
        android:textIsSelectable="true"
        android:gravity="center"
        android:background="@color/dialog_frequency_mode_background_color"
        android:text="@string/setting_lock_wallet_time_20min"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/dialog_unlock_period_select_tv_60_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        style="@style/font_gray_large"
        android:textColor="@color/text_frequency_mode_selector"
        android:gravity="center"
        android:background="@color/dialog_frequency_mode_background_color"
        android:text="@string/setting_lock_wallet_time_60min"/>

    <TextView
        android:id="@+id/dialog_unlock_period_select_tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        android:layout_marginTop="@dimen/activity_margin"
        style="@style/font_gray_large"
        android:gravity="center"
        android:background="@color/dialog_frequency_mode_background_color"
        android:text="@string/text_cancel"/>

</LinearLayout>