<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_unlock_method_selector_tv_unlock_by_enotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        style="@style/font_gray_large"
        android:textColor="@color/text_frequency_mode_selector"
        android:textIsSelectable="true"
        android:gravity="center"
        android:background="@color/dialog_frequency_mode_background_color"
        android:text="@string/setting_default_unlock_method_enotes"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/dialog_unlock_method_selector_tv_unlock_by_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        style="@style/font_gray_large"
        android:textColor="@color/text_frequency_mode_selector"
        android:textIsSelectable="true"
        android:gravity="center"
        android:background="@color/dialog_frequency_mode_background_color"
        android:text="@string/setting_default_unlock_method_password"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/dialog_unlock_method_selector_button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        android:layout_marginTop="@dimen/activity_margin"
        style="@style/font_gray_large"
        android:gravity="center"
        android:background="@color/dialog_frequency_mode_background_color"
        android:text="@string/text_cancel"/>

</LinearLayout>