<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/itemBackground"
    android:orientation="vertical">

    <include layout="@layout/include_dialog_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_24"
            android:orientation="horizontal">

            <TextView
                style="@style/font_gray_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/dialog_text_price" />

            <TextView
                android:id="@+id/dialog_limit_order_create_tv_price"
                style="@style/font_white_dark_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_8"
                android:text="@string/text_empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_24"
            android:orientation="horizontal">

            <TextView
                style="@style/font_gray_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/dialog_text_amount" />

            <TextView
                android:id="@+id/dialog_limit_order_create_tv_amount"
                style="@style/font_white_dark_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_8"
                android:text="@string/text_empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_24"
            android:orientation="horizontal">

            <TextView
                style="@style/font_gray_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/dialog_text_total" />

            <TextView
                android:id="@+id/dialog_limit_order_create_tv_total"
                style="@style/font_white_dark_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_8"
                android:text="@string/text_empty" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/divider_color"/>

    <include layout="@layout/include_dialog_footer" />

</LinearLayout>