<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:navigationIcon="@drawable/ic_back_24_px"
        app:subtitleTextColor="@color/primary_color_grey"
        app:titleTextColor="@color/primary_color_grey">

        <TextView
            android:id="@+id/deploy_title_tv"
            style="@style/font_white_dark_bold_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_deploy" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/deploy_info_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_padding"
            android:paddingEnd="@dimen/activity_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding">

                <TextView
                    style="@style/font_gray_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_account_for_verification" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6">

                    <EditText
                        android:id="@+id/deploy_account_for_verification_et"
                        style="@style/font_white_dark_large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_toStartOf="@+id/deploy_scan_iv"
                        android:background="@android:color/transparent"
                        android:hint="@string/text_hint_account_for_verificaiton"
                        android:singleLine="true"
                        android:textColorHint="@color/text_hint_color" />

                    <ImageView
                        android:id="@+id/deploy_scan_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_scan" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:background="@drawable/bg_item"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding">

                <TextView
                    style="@style/font_gray_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_deploy_asset" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6">

                    <EditText
                        android:id="@+id/deploy_deploy_asset_et"
                        style="@style/font_white_dark_large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/deploy_select_asset_iv"
                        android:background="@android:color/transparent"
                        android:hint="@string/text_hint_deploy_asset"
                        android:maxLines="1"
                        android:textColorHint="@color/text_hint_color" />

                    <ImageView
                        android:id="@+id/deploy_select_asset_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_ieo_more" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@color/colorPrimary" />

                <TextView
                    style="@style/font_gray_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_quantity_to_deploy" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6">

                    <EditText
                        android:id="@+id/deploy_quantity_to_deploy_et"
                        style="@style/font_white_dark_large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/text_hint_quantity_to_deploy"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:textColorHint="@color/text_hint_color" />

                    <TextView
                        android:id="@+id/deploy_available_tv"
                        style="@style/font_grey_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textColor="@color/text_hint_color" />
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/deploy_info_linear_layout"
            android:layout_marginTop="@dimen/activity_margin"
            android:paddingStart="@dimen/activity_padding_double"
            android:paddingEnd="@dimen/activity_padding_double">

            <TextView
                style="@style/font_gray_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_transaction_fee" />

            <TextView
                android:id="@+id/deploy_transaction_fee_tv"
                style="@style/font_white_dark_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/text_empty" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_margin_double">

            <Button
                android:id="@+id/deploy_deploy_bt"
                style="@style/font_white_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:background="@drawable/bg_btn_orange_gradient_enabled"
                android:enabled="false"
                android:text="@string/title_deploy"
                android:textAllCaps="false" />

        </FrameLayout>
    </RelativeLayout>

</LinearLayout>